--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.2.1",
     "jquery": "^3.6.0",
     "js-yaml": "^3.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-file-picker": "^0.0.6",
     "react-router-dom": "^5.2.0",
