--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.0",
     "js-yaml": "^3.14.1",
     "popper.js": "^1.16.1",
+    "primereact": "^6.3.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
